--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,11 +7,14 @@
     "typecheck": "tsc -noEmit"
   },
   "devDependencies": {
-    "vitest": "^1.1.0",
+    "@types/aws-lambda": "^8.10.130",
     "@types/node": "^20.10.5",
-    "sst": "^2.38.7"
+    "sst": "^2.38.7",
+    "vitest": "^1.1.0"
   },
   "dependencies": {
+    "aws-lambda": "^1.0.7",
+    "aws-sdk": "^2.1529.0",
     "zod": "^3.22.4"
   }
 }
