--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -7,9 +7,15 @@
     "typecheck": "tsc -noEmit"
   },
   "devDependencies": {
-    "@types/node": "^20.10.5",
     "@types/aws-lambda": "^8.10.130",
-    "vitest": "^1.1.0",
-    "sst": "^2.38.7"
+    "@types/node": "^20.10.6",
+    "@types/uuid": "^9.0.7",
+    "sst": "^2.39.2",
+    "vitest": "^1.1.2"
+  },
+  "dependencies": {
+    "aws-lambda": "^1.0.7",
+    "aws-sdk": "^2.1529.0",
+    "uuid": "^9.0.1"
   }
 }
