--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.1529.0",
+    "stripe": "^14.14.0",
     "uuid": "^9.0.1"
   }
 }
