--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "deploy": "sst deploy",
     "remove": "sst remove",
     "console": "sst console",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "sst bind vitest run"
   },
   "devDependencies": {
-    "sst": "^2.38.7",
+    "@tsconfig/node18": "^18.2.2",
     "aws-cdk-lib": "2.110.1",
     "constructs": "10.3.0",
+    "sst": "^2.38.7",
     "typescript": "^5.3.3",
-    "@tsconfig/node18": "^18.2.2"
+    "vitest": "^1.4.0"
   },
   "workspaces": [
     "packages/*"
